--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chrome-launcher": "^0.4.0",
     "chrome-remote-interface": "^0.24.3",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "fs-extra": "^4.0.1"
   }
