--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chrome-remote-interface": "^0.24.3",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "fs-extra": "^4.0.1"
+    "fs-extra": "^4.0.1",
+    "winston": "^2.3.1"
   }
 }
