--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src"
+    "start": "node src",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "express": "^4.15.4",
     "fs-extra": "^4.0.1",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "jest": "^20.0.4"
   }
 }
